demo-apps/ghost-cdk/ghost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  labels:
    app: ghost
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:4.9.4
          ports:
            - containerPort: 2368
          livenessProbe:
            tcpSocket:
              port: 2368
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "1"
