demo-apps/ghost-cdk/ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
spec:
  selector:
    app: ghost
  ports:
    - port: 2368
      targetPort: 2368
  type: ClusterIP
