demo-apps/ghost-cdk/ghost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/success-codes: 200,301
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    #external-dns.alpha.kubernetes.io/hostname: ghost.r53domain.com
  labels:
    app: ghost
  name: ghost
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: ghost
                port:
                  number: 2368
            path: /*
            pathType: ImplementationSpecific
